# embedded_lua

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: add_cpm.cmake  add_lua.cmake
cmake/toolchains/gcc/: find_gcc.cmake  gcc_arm_m4f_toolchain.cmake  gcc_arm_toolchain.cmake
examples/: CMakeLists.txt  main.cpp
examples/common/: FreeRTOSConfig.h  stub_hardware_layer.cpp  sys.cpp
examples/common/SEGGER_RTT/: segger_rtt.cmake
examples/common/SEGGER_RTT/Config/: SEGGER_RTT_Conf.h
examples/common/SEGGER_RTT/RTT/: SEGGER_RTT.c  SEGGER_RTT.h  SEGGER_RTT_printf.c
examples/common/SEGGER_RTT/Syscalls/: SEGGER_RTT_Syscalls_GCC.c  SEGGER_RTT_Syscalls_IAR.c  SEGGER_RTT_Syscalls_KEIL.c  SEGGER_RTT_Syscalls_SES.c
examples/nucleo_g474re/: CMakeLists.txt
examples/nucleo_g474re/stm32cubemx/: .mxproject  Makefile  NUCLEO_G474RE.ioc
examples/nucleo_g474re/stm32cubemx/Core/Inc/: main.h  stm32g4xx_hal_conf.h
examples/nucleo_g474re/stm32cubemx/Core/Src/: main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
examples/stm32g4/: stm32g4.cmake  stm32g4xx_hal_conf.h
examples/stm32g4/hal/device/: device_info.h
src/: CMakeLists.txt  lua.cpp  lua.hpp  luaconf.h
